--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
           <li><a href="index.html">Home</a></li>
-          <li><a href="Überuns.html">Über uns</a></li>
+          <li><a href="Überuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -48,30 +48,30 @@
 
    
 	<h1>Herzlich Willkommen bei KIMIA!</h1></br>
-	<p>Wir sind eine Übungsfirma der BHAK/BHAS Liezen und erhoffen uns, durch diese praktische Übung einen besseren Einblick in die reale Arbeitswelt zu bekommen. Wenn Sie mehr über uns erfahren wollen, klicken Sie <a href="Überuns.html">hier.</a></p></br></br></br></br>
+	<p>Wir sind eine &Uumlbungsfirma der BHAK/BHAS Liezen und erhoffen uns, durch diese praktische &Uumlbung einen besseren Einblick in die reale Arbeitswelt zu bekommen. Wenn Sie mehr ü&uumlber uns erfahren wollen, klicken Sie <a href="Überuns.html">hier.</a></p></br></br></br></br>
 	</br>
 	<center>	   
 	<h1>Neuigkeiten</h1></br>
 	<h2>KIMIA ist derzeit noch in der Entwicklungsphase.</h2>
 	<p>Zurzeit werden noch alle Vorkehrungen getroffen, damit wir voraussichtlich im September 2018 erfolgreich als Jungunternehmen starten können. Bis dahin wird alles von unserem Team noch genaustens geplant und vorbereitet.
-	</br>Für einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
+	</br>F&uumlr einen Einblick in das Team, das hinter KIMIA steckt, klicken Sie <a href="UnserTeam.html">hier.</a></p></br></br></br></br>
 	<h1>Aktuelle Angebote</h1></br>
 	
-	<h2>Aktion 1 für den Tag der offenen Tür der BHAK/BHAS Liezen gültig von 23.11.2018 bis 24.11.2018</h2>
+	<h2>Aktion 1 f&uumlr den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
 	
 	<img src="Aktionen/Tag der offenen Tür Aktion Pokito.png" width="100%" height="100%"/></br></br>
-	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen Tür in der BHAK/BHAS Liezen ist, bieten wir Ihen den inovatieven Becher namens Pokito an. 10 Stück kosten nur € 144,99 anstatt € 149,99, wobei Sie € 5,00 sparen.
-	</br></br>Für weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
+	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen den inovatieven Becher namens Pokito an. 10 St&uumlck kosten nur € 144,99 anstatt € 149,99, wobei Sie € 5,00 sparen.
+	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
 	
-	<h2>Aktion 2 für den Tag der offenen Tür der BHAK/BHAS Liezen gültig von 23.11.2018 bis 24.11.2018</h2>
+	<h2>Aktion 2 für den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
 	<img src="Aktionen/Tag der offenen Tür Aktion Regenschirme.png" width="100%" height="100%"/></br></br>
-	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen Tür in der BHAK/BHAS Liezen ist, bieten wir Ihen die sehr speziellen Regenschirme names pluvis an. 10 Stück kosten nur € 469,99 anstatt € 489,99, wobei Sie € 20,00 sparen.
-	</br></br>Für weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
+	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen die sehr speziellen Regenschirme names pluvis an. 10 St&uumlck kosten nur € 469,99 anstatt € 489,99, wobei Sie € 20,00 sparen.
+	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
 	
-	<h2>Eröffnungsaktion gültig vom 08.11.2018 bis 29.11.2018</h2>
+	<h2>Er&oumlffnungsaktion g&uumlltig vom 08.11.2018 bis 29.11.2018</h2>
 	<img src="Aktionen/Aktion 1 08.11.2018 bis 29.11.2018.png" width="100%" height="100%"/></br></br>
-	<p>In Zeitraum vom 08.11.2018 bis zum 29.11.2018, bieten wir Ihen den inovatieven Becher namens Pokito an. 50 Stück kosten nur € 699,99 anstatt 749,50, wobei Sie € 49,51 sparen.
-	</br></br>Für weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p>
+	<p>In Zeitraum vom 08.11.2018 bis zum 29.11.2018, bieten wir Ihen den inovatieven Becher namens Pokito an. 50 St&uumlck kosten nur € 699,99 anstatt 749,50, wobei Sie € 49,51 sparen.
+	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p>
 	</br></br>
 	
 	</br></br>
@@ -80,7 +80,7 @@
 </div>
 <div id="content_footer"></div>
     <div id="footer">
-<p><a href="index.html">Home</a> | <a href="Überuns.html">Über uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+<p><a href="index.html">Home</a> | <a href="Überuns.html">&uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
