--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen den inovatieven Becher namens Pokito an. 10 St&uumlck kosten nur € 144,99 anstatt € 149,99, wobei Sie € 5,00 sparen.
 	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
 	
-	<h2>Aktion 2 für den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
+	<h2>Aktion 2 f&uumlr den Tag der offenen T&uumlr der BHAK/BHAS Liezen g&uumlltig von 23.11.2018 bis 24.11.2018</h2>
 	<img src="Aktionen/Tag der offenen Tür Aktion Regenschirme.png" width="100%" height="100%"/></br></br>
 	<p>Da im Zeitraum vom 23.11.2018 bis zum 24.11.2018 der Tag der offenen T&uumlr in der BHAK/BHAS Liezen ist, bieten wir Ihen die sehr speziellen Regenschirme names pluvis an. 10 St&uumlck kosten nur € 469,99 anstatt € 489,99, wobei Sie € 20,00 sparen.
 	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p></br></br>
@@ -80,7 +80,7 @@
 </div>
 <div id="content_footer"></div>
     <div id="footer">
-<p><a href="index.html">Home</a> | <a href="Überuns.html">&uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+<p><a href="index.html">Home</a> | <a href="Überuns.html">&uumlber uns</a> #x007C  <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
