--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	
 	<h2>Er&oumlffnungsaktion g&uumlltig vom 08.11.2018 bis 29.11.2018</h2>
 	<img src="Aktionen/Aktion 1 08.11.2018 bis 29.11.2018.png" width="100%" height="100%"/></br></br>
-	<p>In Zeitraum vom 08.11.2018 bis zum 29.11.2018, bieten wir Ihen den inovatieven Becher namens Pokito an. 50 St&uumlck kosten nur € 699,99 anstatt &euro 749,50, wobei Sie &euro 49,51 sparen.
+	<p>In Zeitraum vom 08.11.2018 bis zum 29.11.2018, bieten wir Ihen den inovatieven Becher namens Pokito an. 50 St&uumlck kosten nur &#8364 699,99 anstatt &euro 749,50, wobei Sie &euro 49,51 sparen.
 	</br></br>F&uumlr weitere Informationen zum Produkt klicken Sie <a href="produktkatalog.html#pokito">hier.</a></p>
 	</br></br>
 	
