--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -30,7 +30,7 @@
 
 
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="Überuns.html">Über uns</a></li>
+		  <li><a href="Überuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -45,19 +45,19 @@
 
 		<h1>So ticken wir!</h1>
 		<p>
-		Kimia ist ein innovatives junges Unternehmen, welches 2018 an der renommierten BHAK/BHAS Liezen gegründet wurde. 
+		Kimia ist ein innovatives junges Unternehmen, welches 2018 an der renommierten BHAK/BHAS Liezen gegr&uumlndet wurde. 
 		Zusammen versuchen wir, durch Praxis nahen Unterricht einen Einblick in die einzigartige Welt der Wirtschaft zu erlangen um dort unseren Kunden ein eizigartiges Erscheinungsbild zu liefern.</p></br></br>
 
-		<center><h1>Neugierde eröffnet Möglichkeiten!</h1>
-		<p>Wir eröffnen unseren Kunden völlig neue Denkweisen und bieten ihnen die Möglichkeit diese auch umsetzen zu können.</p></br></br>
+		<center><h1>Neugierde er&oumlffnet Möglichkeiten!</h1>
+		<p>Wir er&oumlffnen unseren Kunden v&oumlllig neue Denkweisen und bieten ihnen die M&oumlglichkeit diese auch umsetzen zu k&oumlnnen.</p></br></br>
 
 		<h1>Wissen und Kreativität sind unsere Anker!</h1>
-		<p>Mit unserem Know-how schaffen wir kreative Produkte und halten uns dabei an die Wünsche sowie auch die Ideen unserer Kunden.</p></br></br>
+		<p>Mit unserem Know-how schaffen wir kreative Produkte und halten uns dabei an die W&uumlnsche sowie auch die Ideen unserer Kunden.</p></br></br>
 
-		<h1>Verständnis ist die Basis für erfolgreiche Zusammenarbeit und das Design!</h1>
-		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einprägsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss für ein erfolgreiches Unternehmen.</p></br></br>
+		<h1>Verst&aumlndnis ist die Basis für erfolgreiche Zusammenarbeit und das Design!</h1>
+		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss für ein erfolgreiches Unternehmen.</p></br></br>
 
-		<h1>Jeder Auftrag wird in Perfektion ausgeführt!</h1>
+		<h1>Jeder Auftrag wird in Perfektion ausgefhrt!</h1>
 		<p>Jeder unserer Kunden erhält vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
 		<h1>Wir ergänzen uns!</h1>
