--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -181,7 +181,7 @@
 	</div>
 </div></br></br></br>
 
-<center><h2>Prüggler Julia</h2>
+<center><h2>Pr&uumlggler Julia</h2>
 <figure><img src="images/Prüggler_Julia.jpg" width="200" height="300"/></figure>
 </br></br>
 <div class="container">
@@ -192,7 +192,7 @@
 <div id="open-modal8" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
-    <h1>Prüggler Julia</h1>
+    <h1>Pr&uumlggler Julia</h1>
     <div>Verkauf</br>
 	</div>
 	</div>
