--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -182,7 +182,7 @@
 </div></br></br></br>
 
 <center><h2>Pr&uumlggler Julia</h2>
-<figure><img src="images/Pr&uumlggler_Julia.jpg" width="200" height="300"/></figure>
+<figure><img src="images/Julia.jpg" width="200" height="300"/></figure>
 </br></br>
 <div class="container">
   <div class="interior">
