--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -31,7 +31,7 @@
 
 
           <li><a href="index.html">Home</a></li>
-          <li><a href="Überuns.html">Über uns</a></li>
+          <li><a href="Überuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -252,7 +252,7 @@
     </div></div>
     <div id="content_footer"></div>
     <div id="footer">
-	<p><a href="index.html">Home</a> | <a href="Überuns.html">Über uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+	<p><a href="index.html">Home</a> | <a href="Überuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
