--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -30,7 +30,7 @@
 
 
 		  <li><a href="index.html">Home</a></li>
-          <li><a href="Überuns.html">Über uns</a></li>
+          <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -52,42 +52,11 @@
 </p>
 
 <center>
-<h2><a href="#kugelschreiber">Kugelschreiber | </a>
-	<a href="#schlüsselanhänger">Schlüsselanhänger | </a>
-	<a href="#brieföffner">Brieföffner | </a>
-	<a href="#notizbücher">Notizbücher | </a>
-	<a href="#schreibmappen">Schreibmappen | </a>
-	<a href="#pullover">Pullover | </a>
-	<a href="#sonnenbrillen">Sonnenbrillen | </a></br></br>
-	<a href="#regenschirme">Regenschirme | </a>
-	<a href="#hygieneartikel">Hygieneartikel | </a>
-	<a href="#sonstiges">Sonstiges</a></h2>
+<h2><a href="#Innovationen">Innovationen | </a>
+	<a href="#Streuartikel">Streuartikel</a></h2>
 	</center></br></br></br>
 	
-<center>
-<div class="container">
-  <div class="interior">
-  <a name="kugelschreiber"></a>
-  <h1>Kugelschreiber</h1>
-  <a name="kugelschreiber1"></a>
-  <h2>Kugelschreiber</h2>
-  <figure><img src="images/kugelschreiber1.png"/></figure></br>
-    <a class="btn" href="#open-modal">weiterlesen...</a></br>
-  </div>
-</div></center>
-<div id="open-modal" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
-    <h1>Kugelschreiber</h1>
-    <div>Der Kugelschreiber aus Metall besitzt einen Silikongriffpart und eine Großraummine.</br></br>
-	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Material: </strong> Metall</li>
-	<li><strong>Farben: </strong> schwarz, silber</li>
-	<li><strong>Maße: </strong> 140x10 mm</li>
-	<li><strong>Preis: </strong>	0,25 €/Stück</li></ul>
-	</div>
-	</div>
-</div></br></br></br>
+
 
 <center>
 <div class="container">
@@ -112,17 +81,30 @@
 	</div>
 </div></br></br></br></br></br>
 
+<center>
+  <h2>Kugelschreiber</h2>
+  <figure><img src="images/kugelschreiber1.png"/></figure></br>
+    <a class="btn" href="#open-modal">weiterlesen...</a></br>
+ </center>
+<div id="open-modal" class="modal-window">
+  <div>
+    <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
+    <h1>Kugelschreiber</h1>
+    <div>Der Kugelschreiber aus Metall besitzt einen Silikongriffpart und eine Großraummine.</br></br>
+	<strong>Eigenschaften</strong></br></br>
+<ul><li><strong>Material: </strong> Metall</li>
+	<li><strong>Farben: </strong> schwarz, silber</li>
+	<li><strong>Maße: </strong> 140x10 mm</li>
+	<li><strong>Preis: </strong>	0,25 €/Stück</li></ul>
+	</div>
+	</div>
+</div></br></br></br>
+
 <center>        
-<div class="container">
-  <div class="interior">
-   <a name="schlüsselanhänger"></a>
-   <h1>Schlüsselanhänger</h1>
-   <a name="schlüsselanhänger1"></a>
    <h2>Metall Flaschenöffner</h2>
   <figure><img src="images/schlüsselanhänger1.png" /></figure>
     <a class="btn" href="#open-modal1">weiterlesen...</a></br>
-  </div>
-</div></center>
+ </center>
 <div id="open-modal1" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
@@ -134,7 +116,6 @@
 	</div>
     </div>
 </div></br></br></br>
-		
 		
 <center>		
 <div class="container">
@@ -257,50 +238,6 @@
 	<li><strong>Maße:</strong>317x250x18mm</li>
 	<li><strong>Logomaße:</strong>95x12mm</li>
 	<li><strong>Preis:</strong>15,95 €/Stück</li></ul>
-	</div>
-    </div>
-</div></br></br></br></br></br>
-
-<center>
-<div class="container">
-  <div class="interior">
-   <a name="pullover"></a>
-   <h1>Pullover</h1>
-   <a name="pullover1"></a>
-   <h2>Damen-Pullover mit Kapuze und durchgehendem Reißverschluss</h2>
-  <figure><img src="images/pullover1.png" /></figure></br>
-    <a class="btn" href="#open-modal7">weiterlesen...</a></br>
-  </div>
-</div></center>
-<div id="open-modal7" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
-    <h1>Damen-Pullover mit Kapuze und durchgehendem Reißverschluss</h1>
-    <div>Arora Damen-Pullover mit Kapuze und durchgehendem Reißverschluss, Regular Fit, 2x2 Rippstrick Seitenwände, Bund und Bündchen, Kängurutasche, Single Jersey Futter im Inneren der Kapuze, Stoff Einfassung am Halbmond innen, Satin Nackenband, Kontrastfarbiges Fischgrätenband in der Kapuze, Farbiges Logo hinten, Antike silberne Ösen mit graviertem Logo, Strick aus 80 % Baumwolle und 20 % Polyester, an der Innenseite aufgeraut.
-	</br></br>
-	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Preis:</strong>50,65 €/Stück</li></ul>
-	</div>
-    </div>
-</div></br></br></br>
-
-<center>
-<div class="container">
-  <div class="interior">
-   <a name="pullover2"></a>
-   <h2>Kapuzenpullover mit durchgehendem Reißverschluss</h2>
-  <figure><img src="images/pullover2.png"/></figure></br>
-    <a class="btn" href="#open-modal8">weiterlesen...</a></br>
-  </div>
-</div></center>
-<div id="open-modal8" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
-    <h1>Kapuzenpullover mit durchgehendem Reißverschluss</h1>
-    <div>Moresby Kapuzenpullover mit durchgehendem Reißverschluss, Regular Fit, größenverstellbare Kapuze mit elastischer Kordel und Stoppern, Daumenlöcher, Kängurutasche, Kontrastfarbige Flatlock-Naht vorne und hinten, Atmungsaktives Cool Fit Material, Reflektierendes Logo hinten, Strick aus 100 % Polyester mit saugfähiger Oberfläche und aufgerauter Innenseite.
-	</br></br>
-	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Preis: </strong>50,65 €/Stück</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
