--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -4,6 +4,7 @@
 <head>
   <title>Produktkatalog</title>
   <meta name="description" content="website description" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
