--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -4,7 +4,7 @@
 <head>
   <title>Produktkatalog</title>
   <meta name="description" content="website description" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -54,14 +54,12 @@
 <center>
 <h2><a href="#Innovationen">Innovationen | </a>
 	<a href="#Streuartikel">Streuartikel</a></h2>
-	</center></br></br></br>
-	
-
+</center></br></br></br>
 
 <center>
 <div class="container">
   <div class="interior">
-  <a name="kugelschreiber2"></a>
+  <a name="Innovationen"></a>
   <h2>VertiPen</h2>
   <figure><img src="images/kugelschreiber2.png"/></figure></br>
     <a class="btn" href="#open-modal0">weiterlesen...</a></br>
@@ -69,9 +67,9 @@
 </div></center>
 <div id="open-modal0" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>VertiPen</h1>
-    <div>Präzise gearbeiteter, als Schmuck tragbarer Stift und Eingabestift. Drücken und drehen für einen Stift/Eingabestift Ziehen, um ihn in ein Armband zu verwandeln. Er wird in gravierter Buchenholz-Schachtel mit integrierter Stift-Halterung geliefert und ist für alle kapazitiven Touchscreen-Geräte geeignet.
+    <div>Pr&aumlzise gearbeiteter, als Schmuck tragbarer Stift und Eingabestift. Dr&uumlcken und drehen für einen Stift/Eingabestift Ziehen, um ihn in ein Armband zu verwandeln. Er wird in gravierter Buchenholz-Schachtel mit integrierter Stift-Halterung geliefert und ist für alle kapazitiven Touchscreen-Geräte geeignet.
 </br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong> Edelstahl und Sterlingsilber</li>
@@ -243,16 +241,10 @@
 </div></br></br></br></br></br>
 
 <center>
-<div class="container">
-  <div class="interior">
-  <a name="sonnenbrillen"></a>
-  <h1>Sonnenbrillen</h1>
-  <a name="sonnenbrille1"></a>
   <h2>holzkitz - Wildspitze</h2>
   <figure><img src="images/sonnenbrille1.png"/></figure></br>
     <a class="btn" href="#open-modal9">weiterlesen...</a></br>
-  </div>
-</div></center>
+</center>
 <div id="open-modal9" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
@@ -266,14 +258,10 @@
 </div></br></br></br>
 
 <center>
-<div class="container">
-  <div class="interior">
-  <a name="sonnenbrille2"></a>
   <h2>holzkitz - Großglockner</h2>
   <figure><img src="images/sonnenbrille2.png"/></figure></br>
     <a class="btn" href="#open-modal10">weiterlesen...</a></br>
-  </div>
-</div></center>
+ </center>
 <div id="open-modal10" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
@@ -287,16 +275,10 @@
 </div></br></br></br></br></br>
 
 <center>
-<div class="container">
-  <div class="interior">
-  <a name="regenschirme"></a>
-  <h1>Regenschirme</h1>
-  <a name="regenschirm1"></a>
   <h2>pluvis® Kids</h2>
   <figure><img src="images/regenschirm1.png"/></figure></br>
     <a class="btn" href="#open-modal11">weiterlesen...</a></br>
-  </div>
-</div></center>
+ </center>
 <div id="open-modal11" class="modal-window">
   <div>
     <a href="#modal-close" title="Close" class="modal-close">Schließen</a>
@@ -311,9 +293,6 @@
 </div></br></br></br>
 
 <center>
-<div class="container">
-  <div class="interior">
-  <a name="regenschirm2"></a>
   <h2>pluvis® Adult</h2>
   <figure><img src="images/regenschirm2.png"/></figure></br>
     <a class="btn" href="#open-modal12">weiterlesen...</a></br>
