--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -300,6 +300,11 @@
 </div></br></br></br>
 
 <center>
+<div class="container">
+  <div class="interior">
+  <a name="Streuartikel"></a>
+  <h1>Streuartikel</h1>
+<center>
   <h2>Kugelschreiber</h2>
   <figure><img src="images/kugelschreiber1.png"/></figure></br>
     <a class="btn" href="#open-modal">weiterlesen...</a></br>
