--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -51,7 +51,8 @@
 <a href="Produktkatalog.pdf">Produktkatalog als PDF </a>
 </p>
 
-<h2><a href="#Innovationen">Innovationen | </a>
+
+<h2 align="right"><a href="#Innovationen">Innovationen | </a>
 	<a href="#Streuartikel">Streuartikel</a></h2>
 </br></br></br>
 
