--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -45,16 +45,17 @@
 <h1>Produktkatalog</h1>
 
 
-<img style="float: left;" src="images/pdf_symbol.jpg" width="50" height="50"/>
-
-<p style="margin: 0; line-height: 60px;">
-<a href="Produktkatalog.pdf">Produktkatalog als PDF </a>
-</p>
 
 
-<h2 align="right"><a href="#Innovationen">Innovationen | </a>
-	<a href="#Streuartikel">Streuartikel</a></h2>
-</br></br></br>
+	<span align="left" ><p></p>
+</span></h2>
+
+<table>
+  <tr><td width="50"><img style="float: left;" src="images/pdf_symbol.jpg" width="50" height="50"/></td>
+  <td><a href="Produktkatalog.pdf">Produktkatalog als PDF </a></td>
+  <td style="text-algin:right" width="200 px"><h2><a href="#Innovationen">Innovationen | </a>
+	<a href="#Streuartikel">Streuartikel</a></h2></td></tr>
+</table>
 
 <center>
 <div class="container">
@@ -304,7 +305,6 @@
   <div class="interior">
   <a name="Streuartikel"></a>
   <h1>Streuartikel</h1>
-<center>
   <h2>Kugelschreiber</h2>
   <figure><img src="images/kugelschreiber1.png"/></figure></br>
     <a class="btn" href="#open-modal">weiterlesen...</a></br>
