--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -30,7 +30,7 @@
 
 
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="Überuns.html">&Uumlber uns</a></li>
+		  <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -48,26 +48,26 @@
 		Kimia ist ein innovatives junges Unternehmen, welches 2018 an der renommierten BHAK/BHAS Liezen gegr&uumlndet wurde. 
 		Zusammen versuchen wir, durch Praxis nahen Unterricht einen Einblick in die einzigartige Welt der Wirtschaft zu erlangen um dort unseren Kunden ein eizigartiges Erscheinungsbild zu liefern.</p></br></br>
 
-		<center><h1>Neugierde er&oumlffnet Möglichkeiten!</h1>
+		<center><h1>Neugierde er&oumlffnet M&oumlglichkeiten!</h1>
 		<p>Wir er&oumlffnen unseren Kunden v&oumlllig neue Denkweisen und bieten ihnen die M&oumlglichkeit diese auch umsetzen zu k&oumlnnen.</p></br></br>
 
-		<h1>Wissen und Kreativität sind unsere Anker!</h1>
+		<h1>Wissen und Kreativit&aumlt sind unsere Anker!</h1>
 		<p>Mit unserem Know-how schaffen wir kreative Produkte und halten uns dabei an die W&uumlnsche sowie auch die Ideen unserer Kunden.</p></br></br>
 
 		<h1>Verst&aumlndnis ist die Basis für erfolgreiche Zusammenarbeit und das Design!</h1>
 		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss für ein erfolgreiches Unternehmen.</p></br></br>
 
-		<h1>Jeder Auftrag wird in Perfektion ausgefhrt!</h1>
+		<h1>Jeder Auftrag wird in Perfektion ausgef&uumlhrt!</h1>
 		<p>Jeder unserer Kunden erhält vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
-		<h1>Wir ergänzen uns!</h1>
-		<p>Wir schätzen und akzeptieren die Stärken und Schwächen unserer Kunden und Kolegen und schöpfen Kraft daraus, um bestmögliche Ergebnisse liefern zu könen.</center></p></br></br>
+		<h1>Wir erg&aumlnzen uns!</h1>
+		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schwächen unserer Kunden und Kolegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
 
     </div>
 	</div>
     <div id="content_footer"></div>
     <div id="footer">
-<p><a href="index.html">Home</a> | <a href="Überuns.html">Über uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+<p><a href="index.html">Home</a> | <a href="Überuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
