--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -131,7 +131,7 @@
 </div></br></br></br>
 
 <center><h2>Mayerhofer Mathias</h2>
-<figure><img src="images/Mayerhofer_Mathias.jpg" width="200" height="300"/></figure>
+<figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure>
 </br></br>
 <div class="container">
   <div class="interior">
