--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
    
 	<h1>Herzlich Willkommen bei KIMIA!</h1></br>
-	<p>Wir sind eine &Uumlbungsfirma der BHAK/BHAS Liezen und erhoffen uns, durch diese praktische &Uumlbung einen besseren Einblick in die reale Arbeitswelt zu bekommen. Wenn Sie mehr &uumlber uns erfahren wollen, klicken Sie <a href="Überuns.html">hier.</a></p></br></br></br></br>
+	<p>Wir sind eine &Uumlbungsfirma der BHAK/BHAS Liezen und erhoffen uns, durch diese praktische &Uumlbung einen besseren Einblick in die reale Arbeitswelt zu bekommen. Wenn Sie mehr &uumlber uns erfahren wollen, klicken Sie <a href="Ueberuns.html">hier.</a></p></br></br></br></br>
 	</br>
 	<center>	   
 	<h1>Neuigkeiten</h1></br>
