--- a/Impressum.html
+++ b/Impressum.html
@@ -31,7 +31,7 @@
 
 
           <li><a href="index.html">Home</a></li>
-          <li><a href="Überuns.html">Über uns</a></li>
+          <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -47,8 +47,8 @@
 		<h1>Impressum</h1>
 		<p>Informationspflicht laut §5 E-Commerce Gesetz, §14 Unternehmensgesetzbuch, §63 Gewerbeordnung und Offenlegungspflicht laut §25 Mediengesetz.</p></br>
 
-		<strong>Name</strong>KIMIA GmbH </br>
-		<strong>Land</strong>Österreich</br>
+		<strong>Name:</strong> KIMIA GmbH </br>
+		<strong>Land:</strong> &Oumlsterreich</br>
 		<strong>Unternehmensgegenstand:</strong> Handel - Waren aller Art</br>
 		<strong>UID-Nummer:</strong> ATU80062566</br>
 		<strong>Firmenbuchnummer:</strong> 625</br>
@@ -56,34 +56,34 @@
 		<strong>Tel.: </strong>+43 (0) 3612 223 32</br>
 		<strong>E-Mail: </strong>kimia@625.uebungsfirmen,at</br>
 		<strong>Berufsbezeichnung: </strong>Handel - Waren aller Art</br>
-		<strong>Geschäftsführer:</strong> Nicolas Tritscher</br></br>
+		<strong>Gesch&aumlftsf&uumlhrer:</strong> Nicolas Tritscher</br></br>
 
 
 		<h1>EU-Streitschlichtung</h1>
-		<p>Gemäß Verordnung über Online-Streitbeilegung in Verbraucherangelegenheiten (ODR-Verordnung) möchten wir Sie über die Online-Streitbeilegungsplattform (OS-Plattform) informieren.
-		Verbraucher haben die Möglichkeit, Beschwerden an die Online Streitbeilegungsplattform der Europäischen Kommission unter http://ec.europa.eu/odr?tid=221079732 zu richten. Die dafür notwendigen Kontaktdaten finden Sie oberhalb in unserem Impressum.</br>
-		Wir möchten Sie jedoch darauf hinweisen, dass wir nicht bereit oder verpflichtet sind, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p> </br>
+		<p>Gem&auml&szlig Verordnung &uumlber Online-Streitbeilegung in Verbraucherangelegenheiten (ODR-Verordnung) m&oumlchten wir Sie &uumlber die Online-Streitbeilegungsplattform (OS-Plattform) informieren.
+		Verbraucher haben die M&oumlglichkeit, Beschwerden an die Online Streitbeilegungsplattform der Europ&aumlischen Kommission unter http://ec.europa.eu/odr?tid=221079732 zu richten. Die daf&uumlr notwendigen Kontaktdaten finden Sie oberhalb in unserem Impressum.</br>
+		Wir m&oumlchten Sie jedoch darauf hinweisen, dass wir nicht bereit oder verpflichtet sind, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p> </br>
 
-		<h1>Haftung für Inhalte dieser Webseite</h1>
-		<p>Wir entwickeln die Inhalte dieser Webseite ständig weiter und bemühen uns korrekte und aktuelle Informationen bereitzustellen. Leider können wir keine Haftung für die Korrektheit aller Inhalte auf dieser Webseite übernehmen, speziell für jene die seitens Dritter bereitgestellt wurden.</br>
+		<h1>Haftung f&uumlr Inhalte dieser Webseite</h1>
+		<p>Wir entwickeln die Inhalte dieser Webseite st&aumlndig weiter und bem&uumlhen uns korrekte und aktuelle Informationen bereitzustellen. Leider k&oumlnnen wir keine Haftung f&uumlr die Korrektheit aller Inhalte auf dieser Webseite &uumlbernehmen, speziell f&uunlr jene die seitens Dritter bereitgestellt wurden.</br>
 		Sollten Ihnen problematische oder rechtswidrige Inhalte auffallen, bitte wir Sie uns umgehend zu kontaktieren, Sie finden die Kontaktdaten im Impressum.</p></br>
 	
-		<h1>Haftung für Links auf dieser Webseite</h1>
-		<p>Unsere Webseite enthält Links zu anderen Webseiten für deren Inhalt wir nicht verantwortlich sind. Haftung für verlinkte Websites besteht laut § 17 ECG für uns nicht, da wir keine Kenntnis rechtswidriger Tätigkeiten hatten und haben, uns solche Rechtswidrigkeiten auch bisher nicht aufgefallen sind und wir Links sofort entfernen würden, wenn uns Rechtswidrigkeiten bekannt werden.</br>
+		<h1>Haftung f&uumlr Links auf dieser Webseite</h1>
+		<p>Unsere Webseite enth&au5lt Links zu anderen Webseiten f&uumlr deren Inhalt wir nicht verantwortlich sind. Haftung f&uumlr verlinkte Websites besteht laut § 17 ECG f&uumlr uns nicht, da wir keine Kenntnis rechtswidriger T&aumltigkeiten hatten und haben, uns solche Rechtswidrigkeiten auch bisher nicht aufgefallen sind und wir Links sofort entfernen w&uumlrden, wenn uns Rechtswidrigkeiten bekannt werden.</br>
 		Wenn Ihnen rechtswidrige Links auf unserer Website auffallen, bitte wir Sie uns zu kontaktieren, Sie finden die Kontaktdaten im Impressum.</p></br></br>
 
 		<h1>Urheberrechtshinweis</h1>
 		<p>Alle Inhalte dieser Webseite (Bilder, Fotos, Texte, Videos) unterliegen dem Urheberrecht. Falls notwendig, werden wir die unerlaubte Nutzung von Teilen der Inhalte unserer Seite rechtlich verfolgen.</p></br></br>
 
 		<h1>Bildernachweis</h1>
-		<p>Die Bilder, Fotos und Grafiken auf dieser Webseite sind urheberrechtlich geschützt.</br>
+		<p>Die Bilder, Fotos und Grafiken auf dieser Webseite sind urheberrechtlich gesch&uumltzt.</br>
 		Die Bilderrechte liegen bei den folgenden Fotografen und Unternehmen:</p>
 		<ol style="list-style-type:disc;"><li>KIMIA GmbH</li></ol></br></br>
 		
-		<h1>Datenschutzerklärung</h1>
+		<h1>Datenschutzerkl&aumlrung</h1>
 		<h2>Datenschutz</h2>
-		<p>Wir haben diese Datenschutzerklärung (Fassung 21.11.2018-221079732) verfasst, um Ihnen gemäß der Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 und dem Datenschutzgesetz (DSG) zu erklären, welche Informationen wir sammeln, wie wir Daten verwenden und welche Entscheidungsmöglichkeiten Sie als Besucher dieser Webseite haben.</br>
-		Leider liegt es in der Natur der Sache, dass diese Erklärungen sehr technisch klingen, wir haben uns bei der Erstellung jedoch bemüht die wichtigsten Dinge so einfach und klar wie möglich zu beschreiben.</br></br>
+		<p>Wir haben diese Datenschutzerkl&aumlrung (Fassung 21.11.2018-221079732) verfasst, um Ihnen gem&aumlß der Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 und dem Datenschutzgesetz (DSG) zu erkl&aumlren, welche Informationen wir sammeln, wie wir Daten verwenden und welche Entscheidungsm&oumlglichkeiten Sie als Besucher dieser Webseite haben.</br>
+		Leider liegt es in der Natur der Sache, dass diese Erkl&aumlrungen sehr technisch klingen, wir haben uns bei der Erstellung jedoch bem&uumlht die wichtigsten Dinge so einfach und klar wie m&oumlglich zu beschreiben.</br></br>
 		
 		<h2>Automatische Datenspeicherung</h2>
 		<p>Wenn Sie heutzutage Webseiten besuchen, werden gewisse Informationen automatisch erstellt und gespeichert, so auch auf dieser Webseite.</br>
@@ -92,17 +92,17 @@
 		<li>Browser und Browserversion</li>
 		<li>das verwendete Betriebssystem</li>
 		<li>die Adresse (URL) der zuvor besuchten Seite (Referrer URL)</li>
-		<li>den Hostname und die IP-Adresse des Geräts von welchem aus zugegriffen wird</li>
+		<li>den Hostname und die IP-Adresse des Ger&aumlts von welchem aus zugegriffen wird</li>
 		<li>Datum und Uhrzeit</li></ol></br>
 		in Dateien (Webserver-Logfiles).</br></br>
-		In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gelöscht. Wir geben diese Daten nicht weiter, können jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 f DSGVO (Rechtmäßigkeit der Verarbeitung) darin, dass berechtigtes Interesse daran besteht, den fehlerfreien Betrieb dieser Webseite durch das Erfassen von Webserver-Logfiles zu ermöglichen.</p></br></br>
+		In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gel&oumlscht. Wir geben diese Daten nicht weiter, k&oumlnnen jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 f DSGVO (Rechtm&aumlßigkeit der Verarbeitung) darin, dass berechtigtes Interesse daran besteht, den fehlerfreien Betrieb dieser Webseite durch das Erfassen von Webserver-Logfiles zu erm&oumlglichen.</p></br></br>
 
-		<h2>Speicherung persönlicher Daten</h2>
-		<p>Persönliche Daten, die Sie uns auf dieser Website elektronisch übermitteln, wie zum Beispiel Name, E-Mail-Adresse, Adresse oder andere persönlichen Angaben im Rahmen der Übermittlung eines Formulars oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.</br>
-		Wir nutzen Ihre persönlichen Daten somit nur für die Kommunikation mit jenen Besuchern, die Kontakt ausdrücklich wünschen und für die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre persönlichen Daten ohne Zustimmung nicht weiter, können jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
-		Wenn Sie uns persönliche Daten per E-Mail schicken – somit abseits dieser Webseite – können wir keine sichere Übertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschlüsselt per E-Mail zu übermitteln.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtmäßigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie können diesen Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
+		<h2>Speicherung pers&oumlnlicher Daten</h2>
+		<p>Pers&oumlnliche Daten, die Sie uns auf dieser Website elektronisch &uumlbermitteln, wie zum Beispiel Name, E-Mail-Adresse, Adresse oder andere pers&oumlnlichen Angaben im Rahmen der &Uumlbermittlung eines Formulars oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.</br>
+		Wir nutzen Ihre persönlichen Daten somit nur für die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
+		Wenn Sie uns persönliche Daten per E-Mail schicken – somit abseits dieser Webseite – können wir keine sichere Übertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschl&uumlsselt per E-Mail zu &uumlbermitteln.</br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtmäßigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
 
 		<h2>Rechte laut Datenschutzgrundverordnung</h2>
 		<p>Ihnen stehen laut den Bestimmungen der DSGVO und des österreichischen Datenschutzgesetzes (DSG) grundsätzlich die folgende Rechte zu:</br>
