--- a/Impressum.html
+++ b/Impressum.html
@@ -132,7 +132,7 @@
 		Durch den Besuch unserer Webseite können Informationen an Facebook übermittelt werden. Wenn Sie &uumlber ein Facebook-Konto verfügen, kann Facebook diese Daten Ihrem pers&oumlnlichen Konto zuordnen. Sollten Sie das nicht w&uumlnschen, melden Sie sich bitte von Facebook ab.</br>
 		Die Datenschutzrichtlinien, welche Informationen Facebook sammelt und wie sie diese verwenden finden Sie auf <a href="https://www.facebook.com/policy.php."> https://www.facebook.com/policy.php. </a></p></br></br>
 
-		<h2>Instagram Datenschutzerkl&aumlrung</h2>
+		<h2>Instagram Datenschutzerklärung</h2>
 		<p>Wir verwenden auf unserer Webseite Funktionen des Social Media Netzwerks Instagram der Firma Instagram LLC, 1601 Willow Rd, Menlo Park CA 94025, USA.</br>
 		Mit den Funktionen zum Einbetten von Instagram-Inhalten (Embed-Funktion) k&oumlnnen wir Bilder und Videos anzeigen.</br>
 		Durch den Aufruf von Seiten die solche Funktionen nutzen werden Daten (IP-Adresse, Browserdaten, Datum, Uhrzeit, Cookies) an Instagram &uumlbermittelt, gespeichert und ausgewertet.</br>
