--- a/Impressum.html
+++ b/Impressum.html
@@ -45,7 +45,7 @@
 
 
 		<h1>Impressum</h1>
-		<p>Informationspflicht laut §5 E-Commerce Gesetz, §14 Unternehmensgesetzbuch, §63 Gewerbeordnung und Offenlegungspflicht laut §25 Mediengesetz.</p></br>
+		<p>Informationspflicht laut &sect5 E-Commerce Gesetz, &sect14 Unternehmensgesetzbuch, &sect63 Gewerbeordnung und Offenlegungspflicht laut &sect25 Mediengesetz.</p></br>
 
 		<strong>Name:</strong> KIMIA GmbH </br>
 		<strong>Land:</strong> &Oumlsterreich</br>
@@ -69,7 +69,7 @@
 		Sollten Ihnen problematische oder rechtswidrige Inhalte auffallen, bitte wir Sie uns umgehend zu kontaktieren, Sie finden die Kontaktdaten im Impressum.</p></br>
 	
 		<h1>Haftung f&uumlr Links auf dieser Webseite</h1>
-		<p>Unsere Webseite enth&au5lt Links zu anderen Webseiten f&uumlr deren Inhalt wir nicht verantwortlich sind. Haftung f&uumlr verlinkte Websites besteht laut § 17 ECG f&uumlr uns nicht, da wir keine Kenntnis rechtswidriger T&aumltigkeiten hatten und haben, uns solche Rechtswidrigkeiten auch bisher nicht aufgefallen sind und wir Links sofort entfernen w&uumlrden, wenn uns Rechtswidrigkeiten bekannt werden.</br>
+		<p>Unsere Webseite enth&au5lt Links zu anderen Webseiten f&uumlr deren Inhalt wir nicht verantwortlich sind. Haftung f&uumlr verlinkte Websites besteht laut &sect 17 ECG f&uumlr uns nicht, da wir keine Kenntnis rechtswidriger T&aumltigkeiten hatten und haben, uns solche Rechtswidrigkeiten auch bisher nicht aufgefallen sind und wir Links sofort entfernen w&uumlrden, wenn uns Rechtswidrigkeiten bekannt werden.</br>
 		Wenn Ihnen rechtswidrige Links auf unserer Website auffallen, bitte wir Sie uns zu kontaktieren, Sie finden die Kontaktdaten im Impressum.</p></br></br>
 
 		<h1>Urheberrechtshinweis</h1>
@@ -132,7 +132,7 @@
 		Durch den Besuch unserer Webseite können Informationen an Facebook übermittelt werden. Wenn Sie &uumlber ein Facebook-Konto verfügen, kann Facebook diese Daten Ihrem pers&oumlnlichen Konto zuordnen. Sollten Sie das nicht w&uumlnschen, melden Sie sich bitte von Facebook ab.</br>
 		Die Datenschutzrichtlinien, welche Informationen Facebook sammelt und wie sie diese verwenden finden Sie auf <a href="https://www.facebook.com/policy.php."> https://www.facebook.com/policy.php. </a></p></br></br>
 
-		<h2>Instagram Datenschutzerklärung</h2>
+		<h2>Instagram Datenschutzerkl&aumlrung</h2>
 		<p>Wir verwenden auf unserer Webseite Funktionen des Social Media Netzwerks Instagram der Firma Instagram LLC, 1601 Willow Rd, Menlo Park CA 94025, USA.</br>
 		Mit den Funktionen zum Einbetten von Instagram-Inhalten (Embed-Funktion) k&oumlnnen wir Bilder und Videos anzeigen.</br>
 		Durch den Aufruf von Seiten die solche Funktionen nutzen werden Daten (IP-Adresse, Browserdaten, Datum, Uhrzeit, Cookies) an Instagram &uumlbermittelt, gespeichert und ausgewertet.</br>
