--- a/Sotickenwir.html
+++ b/Sotickenwir.html
@@ -54,14 +54,14 @@
 		<h1>Wissen und Kreativit&aumlt sind unsere Anker!</h1>
 		<p>Mit unserem Know-how schaffen wir kreative Produkte und halten uns dabei an die W&uumlnsche sowie auch die Ideen unserer Kunden.</p></br></br>
 
-		<h1>Verst&aumlndnis ist die Basis für erfolgreiche Zusammenarbeit und das Design!</h1>
-		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss für ein erfolgreiches Unternehmen.</p></br></br>
+		<h1>Verst&aumlndnis ist die Basis f&uumlr erfolgreiche Zusammenarbeit und das Design!</h1>
+		<p>Der Erfolg unserer Kunden ist uns sehr wichtig und ein einpr&aumlgsamer Werbeslogan sowie ein sehenswertes Logo sind ein Muss f&uumlr ein erfolgreiches Unternehmen.</p></br></br>
 
 		<h1>Jeder Auftrag wird in Perfektion ausgef&uumlhrt!</h1>
-		<p>Jeder unserer Kunden erhält vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
+		<p>Jeder unserer Kunden erh&aumllt vollste Leistung eines ganzen Kreativ-Teams um beste Ergebnisse zu erzielen. Nur wenn ein Konzept auch wirklich als Perfekt angesehen wird sind wir zufrieden.</p></br></br>
 
 		<h1>Wir erg&aumlnzen uns!</h1>
-		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schwächen unserer Kunden und Kolegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
+		<p>Wir sch&aumltzen und akzeptieren die St&aumlrken und Schw&aumlchen unserer Kunden und Kolegen und sch&oumlpfen Kraft daraus, um bestm&oumlgliche Ergebnisse liefern zu k&oumlnnen.</center></p></br></br>
 
     </div>
 	</div>
