--- a/Impressum.html
+++ b/Impressum.html
@@ -100,36 +100,36 @@
 
 		<h2>Speicherung pers&oumlnlicher Daten</h2>
 		<p>Pers&oumlnliche Daten, die Sie uns auf dieser Website elektronisch &uumlbermitteln, wie zum Beispiel Name, E-Mail-Adresse, Adresse oder andere pers&oumlnlichen Angaben im Rahmen der &Uumlbermittlung eines Formulars oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.</br>
-		Wir nutzen Ihre pers&oumlnlichen Daten somit nur für die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
+		Wir nutzen Ihre pers&oumlnlichen Daten somit nur f&uumlr die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschließen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
 		Wenn Sie uns pers&oumlnliche Daten per E-Mail schicken – somit abseits dieser Webseite – k&oumlnnen wir keine sichere &Uumlbertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschl&uumlsselt per E-Mail zu &uumlbermitteln.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtmäßigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtm&aumlßigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
 
 		<h2>Rechte laut Datenschutzgrundverordnung</h2>
-		<p>Ihnen stehen laut den Bestimmungen der DSGVO und des ö&oumlterreichischen Datenschutzgesetzes (DSG) grundsätzlich die folgende Rechte zu:</br>
+		<p>Ihnen stehen laut den Bestimmungen der DSGVO und des &oumlterreichischen Datenschutzgesetzes (DSG) grunds&aumltzlich die folgende Rechte zu:</br>
 
 		<ol style="list-style-type:disc;"><li>Recht auf Berichtung (Artikel 16 DSGVO)</li>
-		<li>Recht auf Löschung („Recht auf Vergessenwerden“) (Artikel 17 DSGVO)</li>
-		<li>Recht auf Einschränkung der Verarbeitung (Artikel 18 DSGVO)</li>
-		<li>Recht auf Benachrichtigung – Mitteilungspflicht im Zusammenhang mit der Berichtigung oder Löschung personenbezogener Daten oder der Einschr&aumlnkung der Verarbeitung (Artikel 19 DSGVO)</li>
-		<li>Recht auf Datenübertragbarkeit (Artikel 20 DSGVO)</li>
+		<li>Recht auf L&oumlschung („Recht auf Vergessenwerden“) (Artikel 17 DSGVO)</li>
+		<li>Recht auf Einschr&aumlnkung der Verarbeitung (Artikel 18 DSGVO)</li>
+		<li>Recht auf Benachrichtigung – Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&oumlschung personenbezogener Daten oder der Einschr&aumlnkung der Verarbeitung (Artikel 19 DSGVO)</li>
+		<li>Recht auf DatenUumlbertragbarkeit (Artikel 20 DSGVO)</li>
 		<li>Widerspruchsrecht (Artikel 21 DSGVO)</li>
 		<li>Recht, nicht einer ausschlie&szliglich auf einer automatisierten Verarbeitung — einschlie&szliglich Profiling — beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)</li></ol></br>
 		Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verst&ouml&szligt oder Ihre datenschutzrechtlichen Anspr&uumlche sonst in einer Weise verletzt worden sind, k&oumlnnen Sie sich bei der Aufsichtsbeh&oumlrde beschweren, welche in &Oumlsterreich die Datenschutzbeh&oumlrde ist, deren Webseite Sie unter <a href="https://www.dsb.gv.at/">https://www.dsb.gv.at/</a> finden.</p></br></br>
 
 		
-		<h1>Eingebettete Social Media Elemente Datenschutzerklärung</h1>
+		<h1>Eingebettete Social Media Elemente Datenschutzerkl&aumlrung</h1>
 		<p>Wir binden auf unserer Webseite Elemente von Social Media Diensten ein um Bilder, Videos und Texte anzuzeigen.</br>
 		Durch den Besuch von Seiten die diese Elemente darstellen, werden Daten von Ihrem Browser zum jeweiligen Social Media Dienst &uumlbertragen und dort gespeichert. Wir haben keinen Zugriff auf diese Daten.</br>
 		Die folgenden Links f&uumlhren Sie zu den Seiten der jeweiligen Social Media Dienste wo erkl&aumlrt wird, wie diese mit Ihren Daten umgehen:</br>
 
 		<ol style="list-style-type:disc;"><li>Instagram-Datenschutzrichtlinie: <a href="https://help.instagram.com/519522125107875"> https://help.instagram.com/519522125107875</a></li>
-		<li>Für YouTube gilt die Google Datenschutzerkl&aumlrung: <a href="https://policies.google.com/privacy?hl=de"> https://policies.google.com/privacy?hl=de</a></li>
+		<li>F&uumlr YouTube gilt die Google Datenschutzerkl&aumlrung: <a href="https://policies.google.com/privacy?hl=de"> https://policies.google.com/privacy?hl=de</a></li>
 		<li>Facebook-Datenrichtline: <a href="https://www.facebook.com/about/privacy"> https://www.facebook.com/about/privacy</a></li>
 		<li>Twitter Datenschutzrichtlinie: <a href="https://twitter.com/de/privacy"> https://twitter.com/de/privacy</a></li>
-		<li>Facebook Datenschutzerklärung: <a href="https://www.facebook.com/policy.php"> https://www.facebook.com/policy.php</a></li></ol>
+		<li>Facebook Datenschutzerkl&aumlrung: <a href="https://www.facebook.com/policy.php"> https://www.facebook.com/policy.php</a></li></ol>
 		Wir verwenden auf dieser Webseite Funktionen von Facebook, einem Social Media Network der FIrma Facebook Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour, Dublin 2 Ireland.</br>
 		Welche Funktionen (Soziale Plug-ins) Facebook bereitstellt, k&oumlnnen Sie auf <a href="https://developers.facebook.com/docs/plugins/"> https://developers.facebook.com/docs/plugins/ </a> nachlesen.</br>
-		Durch den Besuch unserer Webseite können Informationen an Facebook übermittelt werden. Wenn Sie &uumlber ein Facebook-Konto verfügen, kann Facebook diese Daten Ihrem pers&oumlnlichen Konto zuordnen. Sollten Sie das nicht w&uumlnschen, melden Sie sich bitte von Facebook ab.</br>
+		Durch den Besuch unserer Webseite k&oumlnnen Informationen an Facebook &uumlbermittelt werden. Wenn Sie &uumlber ein Facebook-Konto verf&uumlgen, kann Facebook diese Daten Ihrem pers&oumlnlichen Konto zuordnen. Sollten Sie das nicht w&uumlnschen, melden Sie sich bitte von Facebook ab.</br>
 		Die Datenschutzrichtlinien, welche Informationen Facebook sammelt und wie sie diese verwenden finden Sie auf <a href="https://www.facebook.com/policy.php."> https://www.facebook.com/policy.php. </a></p></br></br>
 
 		<h2>Instagram Datenschutzerkl&aumlrung</h2>
