--- a/Impressum.html
+++ b/Impressum.html
@@ -82,7 +82,7 @@
 		
 		<h1>Datenschutzerkl&aumlrung</h1>
 		<h2>Datenschutz</h2>
-		<p>Wir haben diese Datenschutzerkl&aumlrung (Fassung 21.11.2018-221079732) verfasst, um Ihnen gem&aumlﬂ der Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 und dem Datenschutzgesetz (DSG) zu erkl&aumlren, welche Informationen wir sammeln, wie wir Daten verwenden und welche Entscheidungsm&oumlglichkeiten Sie als Besucher dieser Webseite haben.</br>
+		<p>Wir haben diese Datenschutzerkl&aumlrung (Fassung 21.11.2018-221079732) verfasst, um Ihnen gem&auml&szlig der Vorgaben der Datenschutz-Grundverordnung (EU) 2016/679 und dem Datenschutzgesetz (DSG) zu erkl&aumlren, welche Informationen wir sammeln, wie wir Daten verwenden und welche Entscheidungsm&oumlglichkeiten Sie als Besucher dieser Webseite haben.</br>
 		Leider liegt es in der Natur der Sache, dass diese Erkl&aumlrungen sehr technisch klingen, wir haben uns bei der Erstellung jedoch bem&uumlht die wichtigsten Dinge so einfach und klar wie m&oumlglich zu beschreiben.</br></br>
 		
 		<h2>Automatische Datenspeicherung</h2>
@@ -95,14 +95,14 @@
 		<li>den Hostname und die IP-Adresse des Ger&aumlts von welchem aus zugegriffen wird</li>
 		<li>Datum und Uhrzeit</li></ol></br>
 		in Dateien (Webserver-Logfiles).</br></br>
-		In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gel&oumlscht. Wir geben diese Daten nicht weiter, k&oumlnnen jedoch nicht ausschlieﬂen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 f DSGVO (Rechtm&aumlﬂigkeit der Verarbeitung) darin, dass berechtigtes Interesse daran besteht, den fehlerfreien Betrieb dieser Webseite durch das Erfassen von Webserver-Logfiles zu erm&oumlglichen.</p></br></br>
+		In der Regel werden Webserver-Logfiles zwei Wochen gespeichert und danach automatisch gel&oumlscht. Wir geben diese Daten nicht weiter, k&oumlnnen jedoch nicht ausschlie&szligen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 f DSGVO (Rechtm&auml&szligigkeit der Verarbeitung) darin, dass berechtigtes Interesse daran besteht, den fehlerfreien Betrieb dieser Webseite durch das Erfassen von Webserver-Logfiles zu erm&oumlglichen.</p></br></br>
 
 		<h2>Speicherung pers&oumlnlicher Daten</h2>
 		<p>Pers&oumlnliche Daten, die Sie uns auf dieser Website elektronisch &uumlbermitteln, wie zum Beispiel Name, E-Mail-Adresse, Adresse oder andere pers&oumlnlichen Angaben im Rahmen der &Uumlbermittlung eines Formulars oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.</br>
-		Wir nutzen Ihre pers&oumlnlichen Daten somit nur f&uumlr die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschlieﬂen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
+		Wir nutzen Ihre pers&oumlnlichen Daten somit nur f&uumlr die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschlie&szligen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
 		Wenn Sie uns pers&oumlnliche Daten per E-Mail schicken ñ somit abseits dieser Webseite ñ k&oumlnnen wir keine sichere &Uumlbertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschl&uumlsselt per E-Mail zu &uumlbermitteln.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtm&aumlﬂigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen ñ eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtm&auml&szligigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen ñ eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
 
 		<h2>Rechte laut Datenschutzgrundverordnung</h2>
 		<p>Ihnen stehen laut den Bestimmungen der DSGVO und des &oumlterreichischen Datenschutzgesetzes (DSG) grunds&aumltzlich die folgende Rechte zu:</br>
