--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -31,7 +31,7 @@
 
 
           <li><a href="index.html">Home</a></li>
-          <li><a href="‹beruns.html">&Uumlber uns</a></li>
+          <li><a href="Ueberuns.html">&Uumlber uns</a></li>
           <li><a href="Sotickenwir.html">So ticken wir</a></li>
           <li><a href="Produktkatalog.html">Produktkatalog</a></li>
 		  <li><a href="UnserTeam.html">Unser Team</a></li>
@@ -55,7 +55,7 @@
 </div></center>
 <div id="open-modal0" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Hechl Coleen</h1>
     <div>Rechnungswesen</br>
 	</div>
@@ -72,7 +72,7 @@
 </div></center>
 <div id="open-modal1" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Hollinger Marius</h1>
     <div>Office</br>
 	</div>
@@ -89,7 +89,7 @@
 </div></center>
 <div id="open-modal2" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Kanzler Tamara</h1>
     <div>IT-Abteilung und Marketing</br>
 	</div>
@@ -106,7 +106,7 @@
 </div></center>
 <div id="open-modal3" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Laketic Tamara</h1>
     <div>Personal</br>
 	</div>
@@ -123,7 +123,7 @@
 </div></center>
 <div id="open-modal4" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Lettner Paul</h1>
     <div>IT-Abteilung und Marketing</br>
 	</div>
@@ -140,7 +140,7 @@
 </div></center>
 <div id="open-modal5" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Mayerhofer Mathias</h1>
     <div>Einkauf</br>
 	</div>
@@ -157,7 +157,7 @@
 </div></center>
 <div id="open-modal6" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Nikolic Nina</h1>
     <div>Einkauf</br>
 	</div>
@@ -174,7 +174,7 @@
 </div></center>
 <div id="open-modal7" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Pilz Claudia</h1>
     <div>Verkauf</br>
 	</div>
@@ -191,7 +191,7 @@
 </div></center>
 <div id="open-modal8" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Pr&uumlggler Julia</h1>
     <div>Verkauf</br>
 	</div>
@@ -208,7 +208,7 @@
 </div></center>
 <div id="open-modal9" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Stocklassa Nina</h1>
     <div>Verkauf</br>
 	</div>
@@ -225,9 +225,9 @@
 </div></center>
 <div id="open-modal10" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Tritscher Nicolas</h1>
-    <div>Gesch‰ftsf¸hrung</br>
+    <div>Gesch&aumlftsf&uumlhrung</br>
 	</div>
 	</div>
 </div></br></br></br>
@@ -242,7 +242,7 @@
 </div></center>
 <div id="open-modal11" class="modal-window">
   <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlieﬂen</a>
+    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
     <h1>Turk Martina</h1>
     <div>Rechnungswesen</br>
 	</div>
@@ -252,7 +252,7 @@
     </div></div>
     <div id="content_footer"></div>
     <div id="footer">
-	<p><a href="index.html">Home</a> | <a href="‹beruns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
+	<p><a href="index.html">Home</a> | <a href="Ueberuns.html">&Uumlber uns</a> | <a href="Sotickenwir.html">So ticken wir</a> | <a href="Produktkatalog.html">Produktkatalog</a> | <a href="UnserTeam.html">Unser Team</a> | <a href="impressum.html">Impressum</a>  |  <a href="AGB's.html">AGB's</a></p>
 	</div>
   </div>
 </body>
