--- a/Impressum.html
+++ b/Impressum.html
@@ -101,19 +101,19 @@
 		<h2>Speicherung pers&oumlnlicher Daten</h2>
 		<p>Pers&oumlnliche Daten, die Sie uns auf dieser Website elektronisch &uumlbermitteln, wie zum Beispiel Name, E-Mail-Adresse, Adresse oder andere pers&oumlnlichen Angaben im Rahmen der &Uumlbermittlung eines Formulars oder Kommentaren im Blog, werden von uns gemeinsam mit dem Zeitpunkt und der IP-Adresse nur zum jeweils angegebenen Zweck verwendet, sicher verwahrt und nicht an Dritte weitergegeben.</br>
 		Wir nutzen Ihre pers&oumlnlichen Daten somit nur f&uumlr die Kommunikation mit jenen Besuchern, die Kontakt ausdr&uumlcklich w&uumlnschen und f&uumlr die Abwicklung der auf dieser Webseite angebotenen Dienstleistungen und Produkte. Wir geben Ihre pers&oumlnlichen Daten ohne Zustimmung nicht weiter, k&oumlnnen jedoch nicht ausschlie&szligen, dass diese Daten beim Vorliegen von rechtswidrigem Verhalten eingesehen werden.</br>
-		Wenn Sie uns pers&oumlnliche Daten per E-Mail schicken – somit abseits dieser Webseite – k&oumlnnen wir keine sichere &Uumlbertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschl&uumlsselt per E-Mail zu &uumlbermitteln.</br>
-		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtm&auml&szligigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen – eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
+		Wenn Sie uns pers&oumlnliche Daten per E-Mail schicken &mdash somit abseits dieser Webseite &mdash k&oumlnnen wir keine sichere &Uumlbertragung und den Schutz Ihrer Daten garantieren. Wir empfehlen Ihnen, vertrauliche Daten niemals unverschl&uumlsselt per E-Mail zu &uumlbermitteln.</br>
+		Die Rechtsgrundlage besteht nach Artikel 6  Absatz 1 a DSGVO (Rechtm&auml&szligigkeit der Verarbeitung) darin, dass Sie uns die Einwilligung zur Verarbeitung der von Ihnen eingegebenen Daten geben. Sie k&oumlnnen diesen Einwilligung jederzeit widerrufen &mdash eine formlose E-Mail reicht aus, Sie finden unsere Kontaktdaten im Impressum.</p></br></br>
 
 		<h2>Rechte laut Datenschutzgrundverordnung</h2>
 		<p>Ihnen stehen laut den Bestimmungen der DSGVO und des &oumlterreichischen Datenschutzgesetzes (DSG) grunds&aumltzlich die folgende Rechte zu:</br>
 
 		<ol style="list-style-type:disc;"><li>Recht auf Berichtung (Artikel 16 DSGVO)</li>
-		<li>Recht auf L&oumlschung („Recht auf Vergessenwerden“) (Artikel 17 DSGVO)</li>
+		<li>Recht auf L&oumlschung (&bdquo;Recht auf Vergessenwerden&ldquo;) (Artikel 17 DSGVO)</li>
 		<li>Recht auf Einschr&aumlnkung der Verarbeitung (Artikel 18 DSGVO)</li>
-		<li>Recht auf Benachrichtigung – Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&oumlschung personenbezogener Daten oder der Einschr&aumlnkung der Verarbeitung (Artikel 19 DSGVO)</li>
+		<li>Recht auf Benachrichtigung &mdash Mitteilungspflicht im Zusammenhang mit der Berichtigung oder L&oumlschung personenbezogener Daten oder der Einschr&aumlnkung der Verarbeitung (Artikel 19 DSGVO)</li>
 		<li>Recht auf DatenUumlbertragbarkeit (Artikel 20 DSGVO)</li>
 		<li>Widerspruchsrecht (Artikel 21 DSGVO)</li>
-		<li>Recht, nicht einer ausschlie&szliglich auf einer automatisierten Verarbeitung — einschlie&szliglich Profiling — beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)</li></ol></br>
+		<li>Recht, nicht einer ausschlie&szliglich auf einer automatisierten Verarbeitung &mdash einschlie&szliglich Profiling &mdash beruhenden Entscheidung unterworfen zu werden (Artikel 22 DSGVO)</li></ol></br>
 		Wenn Sie glauben, dass die Verarbeitung Ihrer Daten gegen das Datenschutzrecht verst&ouml&szligt oder Ihre datenschutzrechtlichen Anspr&uumlche sonst in einer Weise verletzt worden sind, k&oumlnnen Sie sich bei der Aufsichtsbeh&oumlrde beschweren, welche in &Oumlsterreich die Datenschutzbeh&oumlrde ist, deren Webseite Sie unter <a href="https://www.dsb.gv.at/">https://www.dsb.gv.at/</a> finden.</p></br></br>
 
 		
