--- a/Produktkatalog.html
+++ b/Produktkatalog.html
@@ -76,7 +76,7 @@
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Material: </strong> Edelstahl und Sterlingsilber</li>
 	<li><strong>Farben: </strong> silber</li>
-	<li><strong>Preis: </strong> 89,99 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong> 89,00 €/St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br></br></br>
@@ -128,7 +128,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
-	<li><strong>Preis: </strong>39,90 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>399,00 €/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -147,13 +147,13 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
-	<li><strong>Preis: </strong>49,90 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>499,99 €/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
 
 <center>
-  <h2>glasello</h2>
+  <h2>Glasello</h2>
   <figure><img src="images/glasello.png"/></figure></br>
     <a class="btn" href="#open-modal13">weiterlesen...</a></br>
  </center>
@@ -165,7 +165,7 @@
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farben: </strong>lila, orange, gr&uumln, rot</li>
-	<li><strong>Preis: </strong>9,99 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>9,99 €/4 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -202,8 +202,8 @@
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Gewicht</strong>157g</li>
 	<li><strong>Volumen</strong>ca. 100 Liter</li> 
-	<li><strong>Farben: </strong>blau, lila, gr&uumln, rot</li>
-	<li><strong>Preis: </strong>19,99 €/St&uumlck</li></ul>
+	<li><strong>Farben: </strong>blau</li>
+	<li><strong>Preis: </strong>199,00 €/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -220,7 +220,7 @@
     <div>Der Pokito ist ein multifunktioneller Trinkbecher. Er ist sp&uumllmaschinenfest und hat einen wasserdichten Verschluss. Man kann ihn in verschiedene Gr&ouml&szligen wie espresso (230 ml), medio (350 ml) und grande (475 ml) umwandeln
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Farben: </strong>blau, lila, gr&uumln</li>
+<ul><li><strong>Farben: </strong>schwarz, braun, weinrot, grau, dunkelgr&uumln, gelb, orange, rot, hellgr&uumln, blau</li>
 	<li><strong>Preis: </strong>14,99 €/St&uumlck</li></ul>
 	</div>
     </div>
@@ -238,8 +238,8 @@
     <div>Eine „Kapuze“ zum Einh&aumlngen, verhindert, dass das Handtuch von der Trainingsbank rutscht. Zwei klar unterscheidbare Seiten: Eine rutschfeste Hygiene-Seite f&uumlrs Ger&aumlt, die weiche Seite f&uumlr den K&oumlrper. Integrierte Tasche f&uumlr Schl&uumlssel, Handy oder Mitgliedskarte. Magnetverschluss zum einfachen Befestigen an Trainingsger&aumlten.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Farben: </strong>rot, blau, grau</li>
-	<li><strong>Preis: </strong>19,99 €/St&uumlck</li></ul>
+<ul><li><strong>Farben: </strong>rot</li>
+	<li><strong>Preis: </strong>199,00 €/10 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -315,10 +315,10 @@
     <h1>Kugelschreiber</h1>
     <div>Der Kugelschreiber aus Metall besitzt einen Silikongriffpart und eine Gro&szligraummine.</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Material: </strong> Metall</li>
-	<li><strong>Farben: </strong> schwarz, silber</li>
-	<li><strong>Ma&szlige: </strong> 140x10 mm</li>
-	<li><strong>Preis: </strong>	0,25 €/St&uumlck</li></ul>
+<ul><li><strong>Material: </strong>Metall</li>
+	<li><strong>Farben: </strong>schwarz, silber</li>
+	<li><strong>Ma&szlige: </strong>140x10 mm</li>
+	<li><strong>Preis: </strong>199,00 €/500 St&uumlck bzw. 349,00 €/1000 St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br>
@@ -334,8 +334,8 @@
     <h1>Metall Flaschen&oumlffner</h1>
     <div>Ein Flaschen&oumlffner als Schl&uumlsselanh&aumlnger. Einfach und gut. Ihre Werbung wird mittels Lasergravur auf dem Flaschen&oumlffner angebracht.</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Farben: </strong> schwarz, silber, rot, blau</li>
-	<li><strong>Preis: </strong>	0,29/St&uumlck</li></ul>
+<ul><li><strong>Farben: </strong>rot</li>
+	<li><strong>Preis: </strong>199,00 €/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br>
@@ -357,7 +357,7 @@
 </br></br>
 	<strong>Eigenschaften</strong></br></br>
 <ul><li><strong>Farbe: </strong>silber</li>
-	<li><strong>Preis: </strong>2,81 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>279,00 €/100 St&uumlck</li></ul>
 	</div>
 	</div>
 </div></br></br></br>
@@ -379,8 +379,8 @@
     <div>Piepst und blinkt, wenn man ihn «anruft» und erm&oumlglicht somit das leichtere Wiederfinden des Schl&uumlssels.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Farbe:</strong>silber</li>
-	<li><strong>Preis:  </strong>3,91 €/St&uumlck</li></ul>
+<ul><li><strong>Farbe: </strong>silber</li>
+	<li><strong>Preis: </strong>390,00 €/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -408,7 +408,7 @@
 	<li><strong>Farbe: </strong>silber</li>
 	<li><strong>Ma&szlige: </strong>163x30x5mm</li>
 	<li><strong>Logoma&szlige: </strong>30x20mm</li>
-	<li><strong>Preis: </strong>3,30 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>180,00 €/50 St&uumlck bzw. 330,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -434,7 +434,7 @@
 <ul><li><strong>Material: </strong>Thermo PU Lederimitat</li>
 	<li><strong>Ma&slige: </strong>21,5x14,2x1,5cm</li>
 	<li><strong>Position der Werbeanbringung: </strong>Vorderseite</li>
-	<li><strong>Preis: </strong>5,81 €/St&uumlck</li></ul>
+	<li><strong>Preis: </strong>299,00 €/St&uumlck bzw. 579,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
@@ -457,10 +457,10 @@
     <div>A4 Schreibmappe aus schwarzem Kunstleder inkl. Schreibblock mit 50 Bl&aumlttern (50 g/m²) und Gunmetal Gravurplatte.
 	</br></br>
 	<strong>Eigenschaften</strong></br></br>
-<ul><li><strong>Material:</strong>Thermo PU Lederimitat</li>
-	<li><strong>Ma&szlige:</strong>317x250x18mm</li>
-	<li><strong>Logoma&szlige:</strong>95x12mm</li>
-	<li><strong>Preis:</strong>15,95 €/St&uumlck</li></ul>
+<ul><li><strong>Material: </strong>Thermo PU Lederimitat</li>
+	<li><strong>Ma&szlige: </strong>317x250x18mm</li>
+	<li><strong>Logoma&szlige: </strong>95x12mm</li>
+	<li><strong>Preis: </strong>799,00 €/50 St&uumlck bzw. 1.549,00/100 St&uumlck</li></ul>
 	</div>
     </div>
 </div></br></br></br></br></br>
