--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -45,209 +45,212 @@
 			
 <h1>Unser Team!</h1></br>
 
-<center><h2>Tritscher Nicolas</h2>
-<figure><img src="images/Tritscher_Nicolas.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal10">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal10" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Tritscher Nicolas</h1>
-    <div>Gesch&aumlftsf&uumlhrung</br>
-	</div>
-	</div>
-</div></br></br></br>
+<center><table>
+	<tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Geschäftsführung</h1></th>
+		<th width="200" align="center"></th>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><figure><img src="images/Tritscher_Nicolas.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal1">mehr...</a></br>
+			</div></div><div id="open-modal1" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Tritscher Nicolas</h1>
+			<div>Gesch&aumlftsf&uumlhrung</br>
+			</div></div></div></td>
+		<td width="200" align="center"></td>
+	</tr></table>
+<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Office</h1></th>
+		<th width="200" align="center"></th>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><figure><img src="images/Hollinger_Marius.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal2">mehr...</a></br>
+			</div></div><div id="open-modal2" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Hollinger Marius</h1>
+			<div>Abteilungsleitung Office</br>
+			</div></div></div></td>
+		<td width="200" align="center"></td>
+	</tr></table>
+<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Verkauf</h1></th>
+		<th width="200" align="center"></th>
+	</tr>
+	<tr>
+		<td width="200" align="center"><figure><img src="images/Stocklassa_Nina.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Pilz_Claudia.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Julia.jpg" width="200" height="300"/></figure></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal3">mehr...</a></br>
+			</div></div><div id="open-modal3" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Stocklassa Nina</h1>
+			<div>Abteilungsleitung Verkauf</br>
+			</div></div></div></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal4">mehr...</a></br>
+			</div></div><div id="open-modal4" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Pilz Claudia</h1>
+			<div>Verkauf</br>
+			</div></div></div></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal5">mehr...</a></br>
+			</div></div><div id="open-modal5" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Pr&uumlggler Julia</h1>
+			<div>Verkauf</br>
+			</div></div></div></td>
+	</tr>
+</table></center>
 
-<center><h2>Hollinger Marius</h2>
-<figure><img src="images/Hollinger_Marius.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal1">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal1" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Hollinger Marius</h1>
-    <div>Office</br>
-	</div>
-	</div>
-</div></br></br></br>
+<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Einkauf</h1></br></th>
+		<th width="200" align="center"></th>
+	</tr></table>
+<table><tr>
+		<td width="200" align="center"><figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Nikolic_Nina.jpg" width="200" height="300"/></figure></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal6">mehr...</a></br>
+			</div></div><div id="open-modal6" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Mayerhofer Mathias</h1>
+			<div>Abteilungsleitung Einkauf</br>
+			</div></div></div></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal7">mehr...</a></br>
+			</div></div><div id="open-modal7" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Nikolic Nina</h1>
+			<div>Einkauf</br>
+			</div></div></div></td>
+	</tr></table>
+	
+	<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>IT und Marketing</h1></th>
+		<th width="200" align="center"></th>
+	</tr></table>
+	<table><tr>
+		<td width="200" align="center"><figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal6">mehr...</a></br>
+			</div></div><div id="open-modal6" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Kanzler Tamara</h1>
+			<div>Abteilungsleitung IT und Marketing</br>
+			</div></div></div></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal7">mehr...</a></br>
+			</div></div><div id="open-modal7" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Lettner Paul</h1>
+			<div>IT und Marketing</br>
+			</div></div></div></td>
+	</tr></table>
+	
+	<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Personal</h1></th>
+		<th width="200" align="center"></th>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><figure><img src="images/Laketic_Tamara.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal1">mehr...</a></br>
+			</div></div><div id="open-modal1" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Laketic Tamara</h1>
+			<div>Abteilungsleitung Personal</br>
+			</div></div></div></td>
+		<td width="200" align="center"></td>
+	</tr></table>
+	
+<table><tr>
+		<th width="200" align="center"></th>
+		<th width="200" align="center"><h1>Buchhaltung</h1></th>
+		<th width="200" align="center"></th>
+	</tr></table>
+	<table><tr>
+		<td width="200" align="center"><figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure></td>
+		<td width="200" align="center"><figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure></td>
+	</tr>
+	<tr>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal6">mehr...</a></br>
+			</div></div><div id="open-modal6" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Turk Martina</h1>
+			<div>Abteilungsleitung Buchhaltung</br>
+			</div></div></div></td>
+		<td width="200" align="center"><div class="container">
+			<div class="interior">
+			<a class="btn" href="#open-modal7">mehr...</a></br>
+			</div></div><div id="open-modal7" class="modal-window">
+			<div>
+			<a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
+			<h1>Hechl Coleen</h1>
+			<div>Buchhaltung</br>
+			</div></div></div></td>
+	</tr></table>
 
-<center><h2>Stocklassa Nina</h2>
-<figure><img src="images/Stocklassa_Nina.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal9">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal9" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Stocklassa Nina</h1>
-    <div>Verkauf</br>
-	</div>
-	</div>
-</div></br></br></br>
 
-<center><h2>Pilz Claudia</h2>
-<figure><img src="images/Pilz_Claudia.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal7">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal7" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Pilz Claudia</h1>
-    <div>Verkauf</br>
-	</div>
-	</div>
-</div></br></br></br>
 
-<center><h2>Pr&uumlggler Julia</h2>
-<figure><img src="images/Julia.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal8">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal8" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Pr&uumlggler Julia</h1>
-    <div>Verkauf</br>
-	</div>
-	</div>
-</div></br></br></br>
 
-<center><h2>Mayerhofer Mathias</h2>
-<figure><img src="images/Mathias.jpeg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal5">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal5" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Mayerhofer Mathias</h1>
-    <div>Einkauf</br>
-	</div>
-	</div>
-</div></br></br></br>
 
-<center><h2>Nikolic Nina</h2>
-<figure><img src="images/Nikolic_Nina.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal6">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal6" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Nikolic Nina</h1>
-    <div>Einkauf</br>
-	</div>
-	</div>
-</div></br></br></br>
-
-<center><h2>Kanzler Tamara</h2>
-<figure><img src="images/Kanzler_Tamara.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal2">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal2" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Kanzler Tamara</h1>
-    <div>IT-Abteilung und Marketing</br>
-	</div>
-	</div>
-</div></br></br></br>
-
-<center><h2>Lettner Paul</h2>
-<figure><img src="images/Lettner_Paul.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal4">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal4" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Lettner Paul</h1>
-    <div>IT-Abteilung und Marketing</br>
-	</div>
-	</div>
-</div></br></br></br>
-
-<center><h2>Laketic Tamara</h2>
-<figure><img src="images/Laketic_Tamara.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal3">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal3" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Laketic Tamara</h1>
-    <div>Personal</br>
-	</div>
-	</div>
-</div></br></br></br>
-
-<center><h2>Turk Martina</h2>
-<figure><img src="images/Turk_Martina.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal11">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal11" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Turk Martina</h1>
-    <div>Rechnungswesen</br>
-	</div>
-	</div>
-</div></br></br></br>
-
-<center><h2>Hechl Coleen</h2>
-<figure><img src="images/Hechl_Coleen.jpg" width="200" height="300"/></figure>
-</br></br>
-<div class="container">
-  <div class="interior">
-    <a class="btn" href="#open-modal0">mehr...</a></br>
-  </div>
-</div></center>
-<div id="open-modal0" class="modal-window">
-  <div>
-    <a href="#modal-close" title="Close" class="modal-close">Schlie&szligen</a>
-    <h1>Hechl Coleen</h1>
-    <div>Rechnungswesen</br>
-	</div>
-	</div>
-</div></br></br></br>
 
 
     </div></div>
