--- a/UnserTeam.html
+++ b/UnserTeam.html
@@ -45,7 +45,7 @@
 			
 <h1>Unser Team!</h1></br>
 
-<table>
+<center><table align="center">
 	<tr>
 		<th width="200" align="center"></th>
 		<th width="200" align="center"><h1>Gesch&aumlftsf&uumlhrung</h1></th>
